# fraud-detection-ml

./: .dvcignore  .env.example  .gitignore  Dockerfile  MIGRATION-MLFLOW-2.10.2.md  MIGRATION-MLFLOW-2.22.1.md  README.md  docker-compose.yml  dvc.yaml  params.yaml  predict.py  pyproject.toml  train.py
.dvc/: config
.github/workflows/: continuous-integration.yaml  release-triggered-training.yaml
config/: config.yaml
data/raw/: .gitignore  fraud_detection.csv.dvc
notebooks/: 01_eda.ipynb  run_eda.py
scripts/: entrypoint.sh  monitor_drift.py  run_preprocessing.py
src/: __init__.py  data_utils.py  predict.py  training_utils.py  utils.py
src/components/: __init__.py  data_transformation.py  model_trainer.py
src/pipeline/: training_pipeline.py
tests/: mlflow_compat_test.py  test_data_transformation.py  test_inference_pipeline.py  test_pipeline.py  test_utils.py
