# pyproject.toml
[tool.poetry]
name = "fraud-detection-project"
version = "0.1.0"
description = "A production-grade MLOps pipeline for fraud detection."
authors = ["MLOps Engineer bensatriya3@gmail.com"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.2"
scikit-learn = ">=1.5,<1.6"
xgboost = "^2.0.3"
lightgbm = "^4.4.0"
mlflow = "^2.13.2"
dvc = {extras = ["s3"], version = "^3.50.1"}
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
boto3 = "^1.34.119"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
joblib = "^1.4.2"
marshmallow = "==3.20.1"
imbalanced-learn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.0"
safety = "^3.0.0"
